Cache results in a Redis database
Add support for caching the results of SMT queries in a Redis
database.

Caching is enabled by setting the environment variable SMTGCC_CACHE
to "redis". The result of each SMT query is stored in the database
using a hash of the IR of the check function as the key.

The database is currently hard-coded to host 127.0.0.1 and port 6379.

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,18 @@ AC_LINK_IFELSE([AC_LANG_PROGRAM([[
 	      [LIBS=$save_LIBS
                AC_MSG_RESULT([no])])
 
+AC_MSG_CHECKING([for -lhiredis])
+save_LIBS=$LIBS
+LIBS="-lhiredis $LIBS"
+AC_LINK_IFELSE([AC_LANG_PROGRAM([[
+          #include <hiredis/hiredis.h>
+	]], [[
+          redisConnect("", 0);
+	]])], [AC_DEFINE([HAVE_HIREDIS], [1], [Define to 1 if you have hiredis.])
+               AC_MSG_RESULT([yes])],
+	      [LIBS=$save_LIBS
+               AC_MSG_RESULT([no])])
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT()
