--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Define to 1 if you have hiredis. */
+#undef HAVE_HIREDIS
+
 /* Define to 1 if you have cvc5. */
 #undef HAVE_LIBCVC5
 
