--- a/Makefile.in
+++ b/Makefile.in
@@ -9,6 +9,8 @@ else ifeq ($(findstring bpf, $(ARCH)), bpf)
 CXXFLAGS += -DSMTGCC_BPF
 else ifeq ($(findstring riscv, $(ARCH)), riscv)
 CXXFLAGS += -DSMTGCC_RISCV
+else ifeq ($(findstring sh, $(ARCH)), sh)
+CXXFLAGS += -DSMTGCC_SH
 endif
 
 LIBS:=@LIBS@
@@ -29,6 +31,8 @@ else ifeq ($(findstring bpf, $(ARCH)), bpf)
 	plugins += smtgcc-tv-backend.so
 else ifeq ($(findstring riscv, $(ARCH)), riscv)
 	plugins += smtgcc-tv-backend.so
+else ifeq ($(findstring sh, $(ARCH)), sh)
+	plugins += smtgcc-tv-backend.so
 endif
 
 lib_sources = \
@@ -43,6 +47,7 @@ lib_sources = \
 	lib/read_bpf.cpp \
 	lib/read_ir.cpp \
 	lib/read_riscv.cpp \
+	lib/read_sh.cpp \
 	lib/reduce_bitsize.cpp \
 	lib/simplify_insts.cpp \
 	lib/smt_cvc5.cpp \
@@ -74,6 +79,9 @@ else ifeq ($(findstring bpf, $(ARCH)), bpf)
 else ifeq ($(findstring riscv, $(ARCH)), riscv)
 	plugin_sources += plugin/riscv.cpp
 	backend_objs = plugin/riscv.o
+else ifeq ($(findstring sh, $(ARCH)), sh)
+	plugin_sources += plugin/sh.cpp
+	backend_objs = plugin/sh.o
 endif
 plugin_objects = $(plugin_sources:.cpp=.o)
 
